Support for imageUrl in products. Populate the database with nice products thanks to Anna Sala
